			ROX-Filer
			A RISC OS-like filer for X
			by Thomas Leonard

01-Aug-2000
~~~~~~~~~~~
Added a popup menu of commonly used chmod strings to the Permissions
box. Bracketed text and spaces are now ignored in the commands.
Bug fix: Only menu keys changed since the last load were saved!

31-Jul-2000
~~~~~~~~~~~
Bug fix: Mount points on the pinboard didn't always redraw when the
mounted/unmounted state changed.

30-Jul-2000
~~~~~~~~~~~
Renaming now uses the action windows. This means that you can now
rename something onto another filesystem.

28-Jul-2000
~~~~~~~~~~~
The menu key bindings are now only saved if they actually changed.

Code tidying: Moved some typedefs to the new `global.h' file and
thus removed the dependencies between header files :-)

26-Jul-2000
~~~~~~~~~~~
Tab and Shift-Tab move to next and previous selected item.

25-Jul-2000
~~~~~~~~~~~
The new display styles can now be saved as the defaults (bug spotted by
Vladimir Klebanov).

When autoscrolling is used, prevent the last-highlighted directory
from springing open. 'spring open' now defaults to off.

The toolbar Up and Home buttons can act as drop targets (and spring open
too!).

Options to set the pinboard text background style (suggested by James
Kermode).

23-Jul-2000
~~~~~~~~~~~
Added an option to control the spring-loading feature. Added tooltips
to some of the options. Improved the rule for deciding whether to open
a new window when you click on the toolbar buttons.

Stopped the spring-open window moving while it's open (prevents a bug
in GTK+ from causing problems). Please use GTK+ 1.2.8 or later now!

Dragging near the edge of a window scrolls. Improved the lasso box drag
to use the same system (so it scrolls without you having to move the
mouse).

22-Jul-2000
~~~~~~~~~~~
Added 'spring-loaded' directories. If you drag a file over a directory and
hold it there, the directory will spring open! (suggested by Barney
Clarkson)

21-Jul-2000
~~~~~~~~~~~