@@ -15,6 +15,17 @@ directory in its new location until you click refresh.
 
 MISSING FEATURES
 
+Make the panel work more like the pinboard.
+
+User-definable icons for the different mount points.
+
+Configurable timeout for the spring-open feature.
+
+Highlighting of icons as you drag a box around them, so its clear what you
+have caught in the box.
+
+Control setup of pinboard and panels from the GUI?
+
 Allow applets inside the panel? Allow the filer to go inside GNOME-panel
 and similar?
 
