@@ -43,5 +43,8 @@ void release_xdnd_proxy(guint32 xid);
 GdkWindow *find_click_proxy_window(void);
 gboolean get_pointer_xy(int *x, int *y);
 void centre_window(GdkWindow *window, int x, int y);
+void make_colour_patch(GtkWidget *button);
+void button_patch_set_colour(GtkWidget *button, GdkColor *color);
+GdkColor *button_patch_get_colour(GtkWidget *button);
 
 #endif /* _GUI_SUPPORT_H */
