@@ -2,7 +2,16 @@
 			A RISC OS-like filer for X
 			by Thomas Leonard
 
-01-Aug-2000
+06-Aug-2000
+~~~~~~~~~~~
+New options to set the pinboard text foreground and background colours.
+
+05-Aug-2000
+~~~~~~~~~~~
+Your home directory is now displayed as '~' in the title bar, rather
+than as a full path.
+
+01-Aug-2000 (Release 0.1.26)
 ~~~~~~~~~~~
 Added a popup menu of commonly used chmod strings to the Permissions
 box. Bracketed text and spaces are now ignored in the commands.
